--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.20.55",
+    "dotenv": "^16.3.1",
     "near-api-lite": "github:Narwallets/near-api-lite",
+    "pg": "^8.11.1",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.10.2",
+    "typescript": "^5.1.6"
   }
 }
