--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "@types/node": "^12.20.55",
     "near-api-lite": "github:Narwallets/near-api-lite",
+    "pg": "^8.11.1",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.10.2",
+    "typescript": "^5.1.6"
   }
 }
