migration w/run dry testing

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc -b --verbose",
     "test": "npm run build && node dist/main.js test",
+    "dry": "npm run build && node dist/main.js dry test migrate",
+    "migrate": "npm run build && node dist/main.js migrate",
     "start": "npm run build && echo 'check scripts/every-hour.sh, include it in crontab'"
   },
   "author": "",
