--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "tsc -b --verbose",
     "test": "npm run build && node dist/main.js test",
-    "dry": "npm run build && node dist/main.js dry test migrate",
-    "test-migrate": "npm run build && node dist/main.js test migrate",
+    "dry": "npm run build && node dist/main.js dry test",
+    "test-migrate-lp-vp": "npm run build && node dist/main.js test migrate-lp-vp",
+    "test-migrate-aud": "npm run build && node dist/main.js test migrate-aud",
     "migrate": "npm run build && node dist/main.js migrate",
     "start": "npm run build && echo 'check scripts/every-hour.sh, include it in crontab'"
   },
