also track unclaimed stnear

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "metayield",
         "mpdao",
         "Narwallets",
+        "stnear",
         "Yocto",
         "YOCTOS",
         "yton"
