--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc -b --verbose",
     "test": "npm run build && node dist/main.js test",
-    "dry": "npm run build && node dist/main.js dry test",
+    "dry": "npm run build && node dist/main.js dry",
     "test-migrate-lp-vp": "npm run build && node dist/main.js test migrate-lp-vp",
     "test-migrate-aud": "npm run build && node dist/main.js test migrate-aud",
     "migrate": "npm run build && node dist/main.js migrate",
