--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ AllVoters.*.json
 certificate/*.crt
 mpdao-hourly-metrics.json
 last-snapshot-AllVoters.json
+voters-snapshot-*
 
 ENOs/
 /202?-??/
