better run in testnet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Delegators",
         "evmp",
+        "metapool",
         "metastaking",
         "metavote",
         "metayield",
