--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b --verbose",
-    "test": "npm run build && node dist/main.js test",
+    "testnet": "npm run build && node dist/main.js test",
     "dry": "npm run build && node dist/main.js dry",
     "test-migrate-lp-vp": "npm run build && node dist/main.js test migrate-lp-vp",
     "test-migrate-aud": "npm run build && node dist/main.js test migrate-aud",
